# structured-output-extraction-with-pydant

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  extraction.py  schemas.py  utils.py
tests/: test_extraction.py  test_schemas.py  test_selection.py
