[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-output-extraction"
version = "0.1.0"
description = "CLI tool to extract structured data from text using LangChain and Pydantic."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.0.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pytest>=7.0",
]

[project.scripts]
structured-extraction = "src.cli:main"
